# SimpleGNN

./: 3  CMakeCache.txt  CMakeLists.txt  DNAS.dat.tmp_2243029053290a  DNAS.dat.tmp_2dbc76a040f65a  DNAS.dat.tmp_711d1d60c45bb02  DNAS.dat.tmp_8db9aa10c9209c  DNAS.dat.tmp_99bd15a0462bf1  DNAS.dat.tmp_a373c0002cad88  DNAS.dat.tmp_daf4d5d03f3e16  DNAScv  GNN.cpp  GNN.h  GNN_interface.cpp  GNN_interface.h  GNN_interface_test.cpp  GNN_test.cpp  Hello.tmp_7ee77e781b9d2f4  Makefile  README.md  a.out  cmake_install.cmake  getData.cpp  localSmall  makefile  myGa.cpp  myGa.h  myGa2.cpp  myGa3.cpp  myGa4.cpp  myGa5.cpp  myGa5.h  myGa6.cpp  myGa6.h  myGa7.cpp  myGa7.h  myGaLocalMat.cpp  myGaMDMPI.cpp  myGaMDMPI.h  myGaMDMPI2.cpp  (+16 more)
